<resources>
    <string name="app_name">appRevisao</string>
    <string name="txtNome">Nome:</string>
    <string name="txtEndereco">Endereço:</string>
    <string name="txtBairro">Bairro:</string>
    <string name="txtCep">Cep:</string>
    <string name="txtObservacoes">Observações:</string>
    <string name="txtDataCadastro">Data Cadastro:</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="txtResposta">Confirmação dos Dados</string>
    <string name="btnConfirmar">Confirmar</string>

</resources>